--- a/index.html
+++ b/index.html
@@ -187,16 +187,14 @@
       </div>
     </div>
 
-    <script src="/lib/jquery/jquery.min.js"></script>
-    <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/lib/feather-icons/feather.min.js"></script>
-    <script src="/lib/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script src="/lib/jquery/jquery.js"></script>
+    <script src="/lib/bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="/lib/feather-icons/feather.js"></script>
+    <script src="/lib/perfect-scrollbar/perfect-scrollbar.js"></script>
     <script src="/lib/jquery.flot/jquery.flot.js"></script>
     <script src="/lib/jquery.flot/jquery.flot.stack.js"></script>
     <script src="/lib/jquery.flot/jquery.flot.resize.js"></script>
-    <script src="/lib/chart.js/Chart.bundle.min.js"></script>
-    <script src="/lib/jqvmap/jquery.vmap.min.js"></script>
-    <script src="/lib/jqvmap/maps/jquery.vmap.usa.js"></script>
+    <script src="/lib/chart.js/Chart.bundle.js"></script>
 
     <script src="/assets/js/dashforge.js"></script>
     <script src="/assets/js/dashforge.aside.js"></script>
