--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <div class="aside-body">
         <ul class="nav nav-aside">
           <li class="nav-label">General</li>
+          <li class="nav-item"><a id="nav-general-dashboard" href="/" class="nav-link"><span>Dashboard</span></a></li>
           <li class="nav-item"><a id="nav-general-usingawsiam" href="/usingawsiam" class="nav-link"><span>Using AWS IAM</span></a></li>
           <li class="nav-item"><a id="nav-general-privesc" href="/privesc" class="nav-link"><span>Privilege Escalation</span></a></li>
           <li class="nav-item"><a id="nav-general-tooling" href="/tooling" class="nav-link"><span>Security Tooling</span></a></li>
