--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <input type="search" class="form-control" placeholder="Search...">
         </div>
         <nav class="nav">
-          <a href="" class="nav-link"><i data-feather="help-circle"></i></a>
+          <a href="/help" class="nav-link"><i data-feather="help-circle"></i></a>
         </nav>
       </div><!-- content-header -->
 
@@ -86,7 +86,7 @@
             <div>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-style1 mg-b-10">
-                  <li class="breadcrumb-item"><a href="#">AWS Cloud Permissions</a></li>
+                  <li class="breadcrumb-item"><a href="/">Reference</a></li>
                   <li class="breadcrumb-item active" aria-current="page"><span class='servicename'></span></li>
                 </ol>
               </nav>
@@ -210,7 +210,7 @@
                   <span class="tx-color-04"><i data-feather="download" class="wd-60 ht-60"></i></span>
                   <div class="media-body mg-l-20">
                     <h6 class="mg-b-10">Download the permissions in CSV format.</h6>
-                    <p class="tx-color-03 mg-b-0">Open it in a spreadsheet or consume it with your own <a href="#">tooling</a>.</p>
+                    <p class="tx-color-03 mg-b-0">Open it in a spreadsheet or consume it with your own <a href="/tooling">tooling</a>.</p>
                   </div>
                 </div><!-- media -->
               </div>
