--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                       <tr>
                         <th>Action</th>
                         <th>Description</th>
+                        <th>Used By</th>
                         <th>Access Level</th>
                         <th>Resource Types</th>
                         <th>Condition Keys</th>
