--- a/index.html
+++ b/index.html
@@ -221,6 +221,23 @@
       </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="resourceTypeModal" tabindex="-1" role="dialog" aria-labelledby="resourceTypeModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="resourceTypeModalLabel">Resource Type Information</h5>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="/lib/jquery/jquery.js"></script>
     <script src="/lib/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="/lib/feather-icons/feather.js"></script>
