--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <input type="search" class="form-control" placeholder="Search...">
         </div>
         <nav class="nav">
-          <a href="/help" class="nav-link"><i data-feather="help-circle"></i></a>
+          <a href="https://github.com/iann0036/permissions.cloud" class="nav-link"><i data-feather="help-circle"></i></a>
         </nav>
       </div><!-- content-header -->
 
