Externally reference maps

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     <title>Permissions Reference for AWS IAM | permissions.cloud</title>
 
-    <link rel="preload" href="/map.json" as="fetch" crossorigin>
-    <link rel="preload" href="/iam_definition.json" as="fetch" crossorigin>
+    <link rel="preload" href="https://iann0036.github.io/sdk-iam-map/map.json" as="fetch" crossorigin>
+    <link rel="preload" href="https://iann0036.github.io/sdk-iam-map/js/iam_definition.json" as="fetch" crossorigin>
 
     <!-- vendor css -->
     <link href="/lib/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
